[project]
name = "hello_crew"
version = "0.1.0"
description = "hello_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "weave>=0.51.42",
]

[project.scripts]
hello_crew = "hello_crew.main:run"
run_crew = "hello_crew.main:run"
train = "hello_crew.main:train"
replay = "hello_crew.main:replay"
test = "hello_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
